@@ -7,28 +7,27 @@
  * See: http://www.opendds.org/license.html
  */
 
-#include "odds_Export.h"
-
 extern "C" {
 
 #include <glib.h>
+#include <gmodule.h>
 
 } // extern "C"
 
 #include <dds/Version.h>
 
 #ifndef ACE_AS_STATIC_LIBS
-odds_Export extern "C"
+G_MODULE_EXPORT extern "C"
 const gchar version[] = DDS_VERSION;
 
-odds_Export extern "C" void
+G_MODULE_EXPORT extern "C" void
 plugin_register()
 {
   extern void proto_register_odds();
   proto_register_odds();
 }
 
-odds_Export extern "C" void
+G_MODULE_EXPORT extern "C" void
 plugin_reg_handoff()
 {
   extern void proto_reg_handoff_odds();
