@@ -1,3 +1,15 @@
+Sun Feb 14 06:04:22 UTC 2010  Steven Stallion  <stallions@ociweb.com>
+
+        * tools/odds_dissector/odds_dissector.cpp:
+        * tools/odds_dissector/odds_plugin.cpp:
+
+          Switched to glib model of managing exports to match other
+          wireshark plugins.
+
+        * tools/odds_dissector/odds_Export.h:
+
+          Removed this file.
+
 Sun Feb 14 05:45:06 UTC 2010  Steven Stallion  <stallions@ociweb.com>
 
         * tools/odds_dissector/odds_dissector.mpc:
